LMS/Content/Site.css
body {
    background-color: #22272d;
    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
    font-size: 13px;
    font-style: normal;
    font-variant: normal;
    font-weight: 400;
    line-height: 18.5714px;
    padding-bottom: 20px;
    padding-top: 0;
}

#nav li#mini-logo {
    display: none;
    font-weight: bold;
}

.dropdown:hover .dropdown-menu {
    display: block;
}

.footer-copyright {
    border-top: 1px dotted #65686c;
    color: #b1b1b1;
    font-size: 12px;
    line-height: 1.4;
}

.block-25 {
    float: left;
    padding: 0 15px;
    padding-right: 0;
    width: 50%;
}

#tbx_bottom_search {
    background-color: rgba(255, 255, 255, 0.15);
    border: 1px solid transparent;
}

.btn-gray {
    background-color: rgba(255, 255, 255, 0.15);
    border: 0;
    color: #fff;
}

    .btn-gray:hover, .btn-git:hover {
        background-color: #fff;
        color: black !important;
    }

.form-control-gray {
    background-clip: padding-box;
    background-color: rgba(255, 255, 255, 0.15);
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    color: #495057;
    display: block;
    font-size: 1rem;
    line-height: 1.5;
    padding: 0.375rem 0.75rem;
    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
    width: 100%;
}

.wrap {
    font-size: 14px;
    padding: 30px;
}

.wrap-50 {
    font-size: 14px;
    padding-top: 50px;
}

.bullet-less li {
    border-bottom: 1px dotted #bbbdbf;
    border-bottom-color: #65686c;
    list-style-type: none;
    margin: 0 0 10px 0;
    padding: 0 0 10px 0;
}

.bullet-less-content li {
    border-bottom: 1px dotted #bbbdbf;
    border-bottom-color: #65686c;
    list-style-type: none;
    margin: 0 0 10px 0;
    padding: 0 0 10px 0;
    padding-bottom: 0;
}

.bullet-less a {
    color: #2362c6;
}

    .bullet-less a:hover {
        color: #0aa3fc !important;
    }

.bullet-less-content a {
    color: #2362c6;
}

    .bullet-less-content a:hover {
        color: #0aa3fc !important;
    }

.btn-library {
    background-color: #330080;
    border-color: #330080;
    color: #fff;
    font-size: 14px;
    padding: 20px;
}

    .btn-library:hover {
        background-color: #240059;
        border-color: #1f004c;
        color: #fff;
    }

    .btn-library:focus, .btn-library.focus {
        box-shadow: 0 0 0 0.2rem rgba(51, 0, 128, 0.5);
    }

    .btn-library.disabled, .btn-library:disabled {
        background-color: #330080;
        border-color: #330080;
        color: #fff;
    }

    .btn-library:not(:disabled):not(.disabled):active, .btn-library:not(:disabled):not(.disabled).active,
    .show > .btn-library.dropdown-toggle {
        background-color: #1f004c;
        border-color: #1a003f;
        color: #fff;
    }

        .btn-library:not(:disabled):not(.disabled):active:focus, .btn-library:not(:disabled):not(.disabled).active:focus,
        .show > .btn-library.dropdown-toggle:focus {
            box-shadow: 0 0 0 0.2rem rgba(51, 0, 128, 0.5);
        }

::selection {
    background: #330080;
    color: white;
}

.btn-library-10 {
    background-color: #330080;
    border-color: #330080;
    color: #fff;
    font-size: 14px;
    padding: 10px;
}

    .btn-library-10:hover {
        background-color: #240059;
        border-color: #1f004c;
        color: #fff;
    }

    .btn-library-10:focus, .btn-library-10.focus {
        box-shadow: 0 0 0 0.2rem rgba(51, 0, 128, 0.5);
    }

    .btn-library-10.disabled, .btn-library-10:disabled {
        background-color: #330080;
        border-color: #330080;
        color: #fff;
    }

    .btn-library-10:not(:disabled):not(.disabled):active, .btn-library-10:not(:disabled):not(.disabled).active,
    .show > .btn-library-10.dropdown-toggle {
        background-color: #1f004c;
        border-color: #1a003f;
        color: #fff;
    }

        .btn-library-10:not(:disabled):not(.disabled):active:focus, .btn-library-10:not(:disabled):not(.disabled).active:focus,
        .show > .btn-library-10.dropdown-toggle:focus {
            box-shadow: 0 0 0 0.2rem rgba(51, 0, 128, 0.5);
        }

#footer-twitter, #footer-facebook {
    font-size: 1.5rem;
    margin-right: 10px;
}

    #footer-twitter:hover:before {
        color: #00aced;
    }

    #footer-facebook:hover:before {
        color: #3b5998;
    }



.btn-library:hover {
    background-color: #3d009b;
    border-color: #3d009b;
    color: #fff;
}

.btn-library-10:hover {
    background-color: #3d009b;
    border-color: #3d009b;
    color: #fff;
}

.more {
    color: #4a4f55 !important;
    display: inline-block;
    font-weight: 700;
    text-decoration: none;
}

#nyu-credit {
    color: #027bc2 !important;
    font-weight: 700;
}

    #nyu-credit:hover {
        color: #0aa3fc !important;
    }

.more:hover {
    color: #027bc2 !important;
    display: inline-block;
    font-weight: 700;
    text-decoration: none;
}

.btn-git {
    background-color: #22272d;
    color: #fff;
}

.footer-media {
    color: #acb6c2;
    font-size: 12px;
}

#media-link {
    color: #fff;
}

.footer-primary {
    line-height: 18px;
}

    .footer-primary a, u {
        color: #acb6c2;
    }

a, u {
    color: #2362c6;
    text-decoration: none !important;
}

    a:hover {
        color: #0aa3fc;
    }

.footer-primary a:hover {
    color: #d8dee5 !important;
}

.lib-header {
    background-color: #330080 !important;
    padding: 20px 50px;
}

#searchbox-inner {
    background-color: white;
}

#searchbox {
    background-image: url('../Images/Dynamic Design.png');
    background-position: 50% 50%;
    background-repeat: no-repeat;
    background-size: cover;
}


.lib-nav {
    font-size: 18px !important;
    padding-bottom: 20px !important;
    padding-left: 135px;
    padding-right: 135px;
    padding-top: 20px !important;
    /*display:inline-flex;*/
}

/* Fixes dropdown menus placed on the right side */

.ml-auto .dropdown-menu {
    left: auto !important;
    right: 0px;
}

.nav-link {
    padding-left: .5rem !important;
    padding-right: .5rem !important;
}



.dropdown-item:hover {
    background-color: #330080;
    border-color: #330080;
    color: #fff;
}

.bg-black {
    background-color: #000000;
}

.tinted {
    background: rgba(40, 40, 40, 0.95);
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1; /* Just to keep it at the very top */
}

.lib-backdrop {
    background-image: url('../Images/library-hero.jpg');
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 0; /* Just to keep it at the very top */
}

.divider {
    margin-bottom: 10px;
    margin-top: 10px;
    text-align: center;
}

.lib-box {
    border: 1px solid #fff;
    color: #fff;
    display: inline-block;
    font-size: 14px;
    height: auto;
    margin: 15px;
    padding: 20px;
    padding-bottom: 15px;
    position: relative;
    text-align: center;
    width: 360px;
}

textarea:focus,
input[type="text"]:focus,
input[type="password"]:focus,
input[type="datetime"]:focus,
input[type="datetime-local"]:focus,
input[type="date"]:focus,
input[type="month"]:focus,
input[type="time"]:focus,
input[type="week"]:focus,
input[type="number"]:focus,
input[type="email"]:focus,
input[type="url"]:focus,
input[type="search"]:focus,
input[type="tel"]:focus,
input[type="color"]:focus,
.uneditable-input:focus {
    border-color: rgba(51, 0, 126, 0.6);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(51, 0, 126, 0.6);
    outline: 0 none;
}

select.form-control:focus {
    border-color: rgba(51, 0, 126, 0.6);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(51, 0, 126, 0.6);
    outline: 0 none;
}

.divider hr {
    margin: 7px 0px;
    width: 30%;
}

.left {
    float: left;
}

.right {
    float: right;
}

/* Responsive: Portrait tablets and up */

@media screen and (min-width: 768px) {
    .jumbotron {
        margin-top: 20px;
    }

    .body-content {
        padding: 0;
    }
}

